G1: UseSHM in combination with a G1HeapRegionSize > os::large_page_size() falls back to use small pages

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: hs24, hs25
    • Component/s: hotspot
    • gc
    • b120

        JDK-8007074 fixes crashes due to incorrect alignment with G1HeapRegionSize > os::large_page_size() and UseSHM (originally tracked by JDK-8016666) has been enabled, and if allocation of SHM/huge pages has actually been successful.

        With JDK-8007074, instead of crashing, if the memory area allocated returned by SHM functions is not aligned with G1HeapRegionSize (or actually the requested alignment), the VM falls back to use small pages.

        This kind of fallback is different to the fallback to use small pages when there are no (or not enough) large pages available at all.

        See os::reserve_memory_special_shm() for details.

        This may represent a performance issue.

        Improve that by e.g. manual alignment or additional allocation of small pages at the start and end to align the heap.

              Assignee:
              Stefan Karlsson
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: