8017629: G1: UseSHM in combination with a G1HeapRegionSize > os::large_page_size() falls back to use small pages

Reviewed-by: pliden, sjohanss, stuefe